<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">配送应用系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- Order Status -->
    <string name="OrderStatus_Unsubmit">待提交</string>
    <string name="OrderStatus_Submitted">待受理</string>
    <string name="OrderStatus_Acceptted">待完成</string>
    <string name="OrderStatus_Completed">已完成</string>
    <string name="OrderStatus_Rejected">被拒绝</string>
    <string name="OrderStatus_Cancelled">已取消</string>
    <!-- layout -->
    <string name="label_PhoneNumber">手机号：</string>
    <string name="hint_PleaseInputPhoneNumber">请输入手机号</string>
    <string name="label_Password">密码：</string>
    <string name="hint_PleaseInputPassword">请输入用户密码</string>
    <string name="text_Login">登录</string>
    <string name="text_Cancel">取消</string>
    <string name="text_Warn">提醒</string>
    <string name="text_Confirm">确定</string>
    <string name="text_Goods">商品</string>
    <string name="text_UnitPrice">单价</string>
    <string name="text_Quantity">数量</string>
    <string name="label_TotalAmount">总计：</string>
    <string name="lable_Amount_1">元（其中配送费：</string>
    <string name="lable_Amount_2">元） 数量：</string>
    <string name="label_OrderStatus">订单状态：</string>
    <string name="label_OrderSN">订单号：</string>
    <string name="label_SubmitTime">提交时间：</string>
    <string name="label_OrderComment">订单备注：</string>
    <string name="label_cancel_order">取消订单</string>
    <string name="hint_canel_order_reason">请输入取消订单原因！</string>
    <string name="label_update_order">修改订单</string>
    <string name="label_order_comment">订单备注：</string>
    <string name="label_update_reason">更改原因：</string>
    <string name="hint_update_reason">请输入订单变更原因！</string>
    <string name="map_activity_label_1">：</string>
    <string name="map_activity_label_2">分钟/</string>
    <string name="map_activity_label_3">米</string>
    <string name="menu_history_orders">历史订单</string>
    <string name="menu_logout">注销</string>

</resources>