<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ActivityTheme" >

    <TextView
        style="@style/FormLabelStyle"
        android:text="@string/label_PhoneNumber" />

    <EditText
        android:id="@+id/userName"
        style="@style/FormEditTextStyle"
        android:hint="@string/hint_PleaseInputPhoneNumber"
        android:inputType="phone" />

    <TextView
        style="@style/FormLabelStyle"
        android:text="@string/label_Password" />

    <EditText
        android:id="@+id/password"
        style="@style/FormEditTextStyle"
        android:hint="@string/hint_PleaseInputPassword"
        android:imeOptions="actionGo"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/loginButton"
            style="@style/ButtonStyle"
            android:text="@string/text_Login" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/ButtonStyle"
            android:layout_marginLeft="10dip"
            android:text="@string/text_Cancel" />
    </LinearLayout>

</LinearLayout>