<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="400dip"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/title"
        style="@style/TextViewStyle1"
        android:text="@string/label_update_order" />

    <View
        style="@style/LineStyle"
        android:background="#E5E5E5" />

    <TextView
        style="@style/FormLabelStyle"
        android:text="@string/label_order_comment" />

    <EditText
        android:id="@+id/comment"
        style="@style/FormEditTextStyle"
        android:layout_width="match_parent" />

    <TextView
        style="@style/FormLabelStyle"
        android:text="@string/label_update_reason" />

    <EditText
        android:id="@+id/reason"
        style="@style/FormEditTextStyle"
        android:hint="@string/hint_update_reason" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/okButton"
            style="@style/ButtonStyle"
            android:layout_marginRight="10dip"
            android:text="@string/text_Confirm" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/ButtonStyle"
            android:layout_marginLeft="10dip"
            android:text="@string/text_Cancel" />
    </LinearLayout>

</LinearLayout>