<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/org.herod.worker.phone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="400dip"
    android:orientation="vertical"
    android:padding="20dip" >

    <TextView
        android:id="@+id/title"
        style="@style/TextViewStyle1"
        android:text="@string/label_cancel_order" />

    <View
        style="@style/LineStyle"
        android:background="@color/ActivityBackground" />

    <org.herod.framework.widget.VerifyEditText
        android:id="@+id/reason"
        style="@style/FormEditTextStyle"
        android:hint="@string/hint_canel_order_reason"
        app:canEmpty="false"
        app:emptyErrorMessage="请输入取消原因！" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/okButton"
            style="@style/ButtonStyle"
            android:layout_marginRight="10dip"
            android:text="@string/text_Confirm" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/ButtonStyle"
            android:layout_marginLeft="10dip"
            android:text="@string/text_Cancel" />
    </LinearLayout>

</LinearLayout>