<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/acceptOrderButton"
            style="@style/OrderButtonStyle"
            android:contentDescription="@null"
            android:src="@drawable/accept" />

        <ImageButton
            android:id="@+id/completeOrderButton"
            style="@style/OrderButtonStyle"
            android:contentDescription="@null"
            android:src="@drawable/ic_pay_ok"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/rejectOrderButton"
            style="@style/OrderButtonStyle"
            android:contentDescription="@null"
            android:src="@drawable/return_back"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/editOrderButton"
            style="@style/OrderButtonStyle"
            android:contentDescription="@null"
            android:src="@drawable/edit_order" />

        <ImageButton
            android:id="@+id/cancelOrderButton"
            style="@style/OrderButtonStyle"
            android:contentDescription="@null"
            android:src="@drawable/ticket_btn_delete" />


        <ImageButton
            android:id="@+id/route"
            style="@style/OrderButtonStyle"
            android:contentDescription="@null"
            android:src="@drawable/icon_route" />

        <ImageButton
            android:id="@+id/cancelEditButton"
            style="@style/OrderButtonStyle"
            android:layout_marginRight="10dip"
            android:contentDescription="@null"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="gone" />

        <View
            android:layout_width="0dip"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/addNewItemButton"
            style="@style/OrderButtonStyle"
            android:contentDescription="@null"
            android:src="@drawable/ic_menu_add_item"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/confirmEditButton"
            style="@style/OrderButtonStyle"
            android:contentDescription="@null"
            android:src="@drawable/ic_checkmark_holo_light"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:background="@color/ActivityBackground" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_shop"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/shopName"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:padding="5dip"
                android:singleLine="true"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_buyer"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/buyerName"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:padding="5dip"
                android:singleLine="true"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:background="@color/ActivityBackground" />

    <include layout="@layout/order_item_header" />

    <LinearLayout
        android:id="@+id/orderItemsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@color/ActivityBackground" />

    <LinearLayout
        android:id="@+id/totalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_TotalAmount" />

        <TextView
            android:id="@+id/totalWithCostOfRunErrands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lable_Amount_1" />

        <TextView
            android:id="@+id/costOfRunErrands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lable_Amount_2" />

        <TextView
            android:id="@+id/totalQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red" />
    </LinearLayout>

    <TextView
        android:id="@+id/shopTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#888"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@color/ActivityBackground" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_OrderStatus"
                android:textColor="#888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_OrderSN"
                android:textColor="#888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/serialNumber"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:textColor="#888"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_SubmitTime"
                android:textColor="#888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/submitTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_OrderComment"
                android:textColor="#888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>